examples/test/testpolicy15572.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15572
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key22: value22
      key47: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value43
          key37: value37
          key33: value3
      podSelector:
        matchLabels:
          key45: value45
          key42: value43
          key22: value19
